2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-border-image-parser.c (border_image_convert):
	* ccss-cairo/ccss-cairo-style.c (gather_outline),
	(gather_background), (ccss_cairo_style_draw_outline),
	(ccss_cairo_style_draw_rectangle),
	(ccss_cairo_style_draw_rectangle_with_gap):
	Fix warnings.

	* ccss/ccss-property-generic.c (property_free): free string payload.

	* ccss/ccss.sym: export dump functions.

	* examples/example-1.c (main):
	* examples/example-2.c (main):
	* examples/example-3.c (main):
	* examples/example-4.c (main):
	Correctly shutdown ccss-cairo.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-function.h:
	* ccss/ccss-property-generic.c:
	* ccss/ccss-property.c:
	* ccss/ccss-property.h:
	* ccss/ccss-selector.c (ccss_selector_copy):
	* ccss/ccss.c:
	Fix warnings.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* ccss-clutter/Makefile.am:
	* ccss-clutter/ccss-clutter.c:
	* ccss-clutter/ccss-clutter.h:
	* ccss-clutter/example-1.c:
	* ccss-clutter/example-1.css:
	* ccss-clutter/example-2.c:
	* ccss-clutter/example-2.css:
	* ccss-clutter/foo.svg:
	* configure.in:
	* examples/Makefile.am:
	* examples/example-1.c:
	* examples/example-2.c:
	* examples/example-3.c:
	* examples/example-4.c:
	Remove stale clutter examples, fix examples build.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo-doc/ccss-cairo-docs.sgml:
	* ccss-cairo-doc/ccss-cairo-sections.txt:
	* ccss-cairo-doc/tmpl/ccss-cairo-unused.sgml:
	* ccss-cairo-doc/tmpl/ccss.sgml:
	* ccss-cairo-doc/tmpl/ccss_cairo.sgml:
	* ccss-cairo-doc/tmpl/style.sgml:
	* ccss-cairo/ccss-cairo-style.c (ccss_cairo_style_draw_line),
	(ccss_cairo_style_draw_outline), (ccss_cairo_style_draw_rectangle),
	(ccss_cairo_style_draw_rectangle_with_gap):
	* ccss-cairo/ccss-cairo-style.h:
	* ccss-cairo/ccss-cairo.sym:
	* ccss-clutter/ccss-clutter.c (ccss_clutter_paint):
	* ccss-clutter/example-1.c (paint_css):
	* ccss-doc/ccss-docs.sgml: