@@ -1,5 +1,14 @@
 2008-11-25  Robert Staudinger  <robsta@gnome.org>
 
+	* ccss/Makefile.am:
+	* ccss/ccss-node-priv.h:
+	* ccss/ccss-node.c:
+	* ccss/ccss-node.h:
+	* ccss/ccss-selector.c:
+	Split out private node interface.
+
+2008-11-25  Robert Staudinger  <robsta@gnome.org>
+
 	* ccss-cairo/ccss-border-image-parser.c (border_image_convert):
 	* ccss-cairo/ccss-cairo-style.c (gather_outline),
 	(gather_background), (ccss_cairo_style_draw_outline),
